# Homework3

./: README.md
ej1/: CMakeLists.txt
ej1/example/: main.cpp
ej1/headers/: IMediciones.hpp  MedicionBase.hpp  Posicion.hpp  Presion.hpp  SaveFlightData.hpp
ej1/sources/: MedicionBase.cpp  Posicion.cpp  Presion.cpp  SaveFlightData.cpp
ej2/: Makefile
ej2/example/: main.cpp
ej2/headers/: circulo.hpp  elipse.hpp  procesador.hpp  punto.hpp  rectangulo.hpp
ej2/sources/: circulo.cpp  elipse.cpp  punto.cpp  rectangulo.cpp
ej3/: Makefile
ej3/example/: main  main.cpp  main2.cpp
ej3/headers/: mapjson.hpp  veccreator.hpp  vectortostring.hpp
ej3/sources/: mapjson.cpp  veccreator.cpp
